# xc8-cmake-template

./: CMakeLists.txt  PreLoad.cmake
.cache/clangd/index/: configuration_bits.h.A0FAEF76B08D828B.idx  hal.c.037C16318A3ABBC6.idx  hal.h.520F6862724D9DB8.idx  main.c.4E8A151F4ED8BB3F.idx
app/: CMakeLists.txt
app/include/: configuration_bits.h
app/src/: main.c
hal/: CMakeLists.txt
hal/include-public/hal/: delays.h  hal.h
hal/src/: delays.c  hal.c
